--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "daisyui": "^2.14.3",
     "react": "^18.1.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^1.0.8",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
