--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "daisyui": "^2.14.3",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-dark-mode-toggle": "^0.2.0",
+    "react-day-picker": "^8.0.4",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
     "react-router-dom": "^6.3.0",
