--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.1",
+    "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^1.0.8",
+    "react-toastify": "^9.0.1",
     "react-typed": "^1.2.0",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
