--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scroll-to-top": "^1.0.8",
     "react-toastify": "^9.0.1",
     "react-typed": "^1.2.0",
+    "swiper": "^8.3.1",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
